- Added =ollama-buddy-toggle-global-system-prompt= command to quickly toggle the feature
- Added toggle to transient menu under "Display Toggle" (key: 9)
- Works with all providers: Ollama, OpenAI, Claude, Gemini, Grok, and Codestral

This feature helps ensure consistent response formatting across different models, avoiding issues like unexpected markdown tables in responses.

** <2026-01-31 Fri> *1.1.4*

Header-line and keybinding improvements

- Added =C-c RET= keybinding to send prompts (matches gptel convention)
- Simplified header-line: removed backend indicator (N/C)
- Changed header-line "Markdown" indicator to "MD" for compactness
- Fixed markdown to org heading conversion: MD headings now offset by 2 levels so H1 becomes org level 3, properly nesting under the =** [MODEL] RESPONSE= heading

** <2026-01-31 Fri> *1.1.3*

Improved chat UX and simplified codebase

- Added =ollama-buddy-auto-scroll= customization option (default: nil)
- When nil, cursor stays in place during streaming output, allowing manual scrolling
- When t, buffer auto-scrolls to follow new output (previous behavior)
- Added =ollama-buddy-pulse-response= option (default: t) to flash/pulse the response text when streaming completes, providing visual feedback similar to gptel
- Removed model name coloring feature (hash-based highlighting)
- Removed =ollama-buddy-highlight-models-enabled=, =ollama-buddy-toggle-model-highlighting=
- Simplifies codebase and may improve org-mode buffer performance

** <2026-01-30 Thu> *1.1.2*

Simplified chat interface

- Streamlined welcome screen showing only essential commands
- Full interface info (models, commands) moved to separate =*Ollama Buddy Info*= buffer via =C-c A=
- Model selection now shows counts: =C-c m (10 ollama / 4 online)= and =C-u C-c m (7 cloud)=
- Header line displays bold prefix characters for loaded external providers: =acgks=
- Welcome screen lists enabled online LLM providers (e.g., "Online: a: OpenAI | c: Claude")
